--- a/multi-module/webapp/pom.xml
+++ b/multi-module/webapp/pom.xml
@@ -15,6 +15,13 @@
   <name>Webapp</name>
   <description>Webapp.</description>
 
+<distributionManagement>
+ <repository>
+ <id>releases</id>
+ <url>http://localhost:8081/nexus/content/repositories/releases</url>
+ </repository>
+</distributionManagement>
+
   <build>
     <finalName>${project.artifactId}</finalName>
 
