--- a/multi-module/webapp/pom.xml
+++ b/multi-module/webapp/pom.xml
@@ -20,7 +20,13 @@
  <id>releases</id>
  <url>http://localhost:8081/nexus/content/repositories/releases</url>
  </repository>
-</distributionManagement>
+ <snapshotRepository>
+          <id>releases</id>
+          <name>nexus</name>
+          <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+         </snapshotRepository>
+    </distributionManagement>
+
 
   <build>
     <finalName>${project.artifactId}</finalName>
