--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -11,6 +11,19 @@
   <description>Sample multi module Maven project with a working, deployable site.</description>
   <url>http://www.example.com</url>
 
+<distributionManagement>
+ <repository>
+ <id>releases</id>
+ <url>http://localhost:8081/nexus/content/repositories/releases</url>
+ </repository>
+ <snapshotRepository>
+          <id>releases</id>
+          <name>nexus</name>
+          <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+         </snapshotRepository>
+    </distributionManagement>
+
+
   <properties>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
