--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,19 @@
   <name>Parent</name>
   <description>Just a pom that makes it easy to build both projects at the same time.</description>
 
+<distributionManagement>
+ <repository>
+ <id>releases</id>
+ <url>http://localhost:8081/nexus/content/repositories/releases</url>
+ </repository>
+ <snapshotRepository>
+          <id>releases</id>
+          <name>nexus</name>
+          <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+         </snapshotRepository>
+   </distributionManagement>
+
+
   <modules>
     <module>multi-module</module>
     <module>single-module</module>
