--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -69,6 +69,10 @@
             </plugin>
 
             <plugin>
+            <artifactId>maven-deploy-plugin</artifactId>
+            </plugin>
+
+            <plugin>
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>findbugs-maven-plugin</artifactId>
             </plugin>
