--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -67,10 +67,14 @@
             <plugin>
               <artifactId>maven-surefire-report-plugin</artifactId>
             </plugin>
+            <plugin>
+              <artifactId>maven-clean-plugin</artifactId>
+            </plugin>
 
             <plugin>
             <artifactId>maven-deploy-plugin</artifactId>
             </plugin>
+           
 
             <plugin>
               <groupId>org.codehaus.mojo</groupId>
