updated install plugin

--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -75,6 +75,10 @@
             <plugin>
             <artifactId>maven-deploy-plugin</artifactId>
             </plugin>
+            
+            <plugin>
+            <artifactId>maven-install-plugin</artifactId>
+            </plugin>
            
 
             <plugin>
