--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -73,6 +73,7 @@
             </plugin>
              
             <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-install-plugin</artifactId>
             <configuration>
              <autoVersionSubmodules>true</autoVersionSubmodules>
