changes in pom 6

--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -221,10 +221,10 @@
   </dependencyManagement>
 
   <scm>
-    <connection>scm:git:git@github.com:gabrielf/maven-samples.git</connection>
-    <developerConnection>scm:git:git@github.com:gabrielf/maven-samples.git</developerConnection>
+    <connection>scm:git:git@github.com:srinivasaraokonidena/srinivas1.git</connection>
+    <developerConnection>scm:git:git@github.com:srinivasaraokonidena/srinivas1.git</developerConnection>
     <tag>HEAD</tag>
-    <url>http://github.com/gabrielf/maven-samples</url>
+    <url>https://github.com/srinivasaraokonidena/srinivas1.git</url>
   </scm>
 
   <prerequisites>
