--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -70,11 +70,20 @@
 
             <plugin>
               <artifactId>maven-clean-plugin</artifactId>
+             <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+          </configuration>
             </plugin>
              
             <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
+            <groupId>org.codehaus.mojo</groupId>
             <artifactId>maven-install-plugin</artifactId>
+            <version>2.4</version>
+              <configuration>
+               <source>1.6</source>
+               <target>1.6</target>
+             </configuration>
             </plugin>
 
             <plugin>
