--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -68,8 +68,7 @@
               <artifactId>maven-surefire-report-plugin</artifactId>
             </plugin>
 
-            <plugin>
-              <artifactId>maven-clean-plugin</artifactId>
+           
            
             </plugin>
              
@@ -186,6 +185,12 @@
         <artifactId>servlet-api</artifactId>
         <version>2.5</version>
       </dependency>
+   <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-clean-plugin</artifactId>
+    <version>2.4.1</version>
+   </dependency>
+
 
       <dependency>
         <groupId>javax.servlet.jsp</groupId>
