--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -185,10 +185,13 @@
         <artifactId>servlet-api</artifactId>
         <version>2.5</version>
       </dependency>
+
    <dependency>
+    <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-clean-plugin</artifactId>
     <version>2.4.1</version>
+    </plugin>
    </dependency>
 
 
