new changes day2

--- a/single-module/pom.xml
+++ b/single-module/pom.xml
@@ -82,6 +82,17 @@
             </plugin>
 
             <plugin>
+            <artifactId>maven-clean-plugin</artifactId>
+             <version>2.5</version>
+           </plugin>
+
+            <plugin>
+            <artifactId>maven-install-plugin</artifactId>
+            <version>2.4</version>
+           </plugin>
+             
+
+            <plugin>
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>cobertura-maven-plugin</artifactId>
               <version>2.5.1</version>
