--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -69,10 +69,7 @@
               <artifactId>maven-surefire-report-plugin</artifactId>
             </plugin>
                   
-            <plugin>
-            <artifactId>maven-clean-plugin</artifactId>
-            </plugin>
-
+           
 
             <plugin>
               <artifactId>maven-deploy-plugin</artifactId>
@@ -104,6 +101,16 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>2.3.2</version>
         </plugin>
+
+         <plugin>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>2.5</version>
+            </plugin>
+           <plugin>
+            <artifactId>maven-install-plugin</artifactId>
+            <version>2.4</version>
+           </plugin>
+
 
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
