--- a/single-module/pom.xml
+++ b/single-module/pom.xml
@@ -90,6 +90,12 @@
             <artifactId>maven-install-plugin</artifactId>
             <version>2.4</version>
            </plugin>
+
+              <plugin>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <version>2.7</version>
+            </plugin>
+
              
 
             <plugin>
