--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -100,15 +100,18 @@
         </plugin>
 
          <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-clean-plugin</artifactId>
             <version>2.5</version>
             </plugin>
            <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-install-plugin</artifactId>
             <version>2.4</version>
            </plugin>
           
             <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-deploy-plugin</artifactId>
               <version>2.7</version>
             </plugin>
