--- a/multi-module/pom.xml
+++ b/multi-module/pom.xml
@@ -23,7 +23,7 @@
 
   <distributionManagement>
   <repository>
-    <id>releases</id>
+    <id>Releases</id>
     <url>http://localhost:8081/nexus/content/repositories/releases</url>
   </repository>
 </distributionManagement>
@@ -104,6 +104,7 @@
             <artifactId>maven-clean-plugin</artifactId>
             <version>2.5</version>
             </plugin>
+
            <plugin>
            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-install-plugin</artifactId>
@@ -112,8 +113,8 @@
           
             <plugin>
              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-deploy-plugin</artifactId>
-              <version>2.7</version>
+             <artifactId>maven-deploy-plugin</artifactId>
+             <version>2.7</version>
             </plugin>
 
 
