--- a/multi-module/webapp/pom.xml
+++ b/multi-module/webapp/pom.xml
@@ -17,7 +17,7 @@
 
 <distributionManagement>
  <repository>
- <id>releases</id>
+ <id>Releases</id>
  <url>http://localhost:8081/nexus/content/repositories/releases</url>
  </repository>
  </distributionManagement>
