--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
 <distributionManagement>
   <repository>
-    <id>Releases</id>
+    <id>releases</id>
     <url>http://localhost:8081/nexus/content/repositories/releases</url>
   </repository>
 </distributionManagement>
