--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 
 <distributionManagement>
   <repository>
-    <id>releases</id>
-    <url>http://localhost:8081/nexus/content/repositories/releases</url>
+    <id>Releases</id>
+    <url>http://localhost:8081/nexus/content/repositories/releases/</url>
   </repository>
 </distributionManagement>
 
