--- a/multi-module/webapp/pom.xml
+++ b/multi-module/webapp/pom.xml
@@ -16,11 +16,11 @@
   <description>Webapp.</description>
 
 <distributionManagement>
- <repository>
- <id>Releases</id>
- <url>http://localhost:8081/nexus/content/repositories/releases/</url>
- </repository>
- </distributionManagement>
+  <snapshotRepository>
+    <id>snapshots</id>
+    <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+  </snapshotRepository>
+</distributionManagement>
 
 
   <build>
