--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@
   </prerequisites>
 
 <distributionManagement>
-  <repository>
-    <id>Releases</id>
-    <url>http://localhost:8081/nexus/content/repositories/releases/</url>
-  </repository>
+  <snapshotRepository>
+    <id>snapshots</id>
+    <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+  </snapshotRepository>
 </distributionManagement>
 
 
