--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
   </snapshotRepository>
 </distributionManagement>
 
+    <scm>
 
+        <developerConnection>scm:git:https://github.com/srinivasaraokonidena/srinivas1.git</developerConnection>
+
+    </scm>
 
 </project>
